--- a/src/Style/vistaPrincipalProducto.css
+++ b/src/Style/vistaPrincipalProducto.css
@@ -7,7 +7,7 @@
     background-color: #5555557a;
     float: left;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.25); 
-    border: .15rem solid black;
+    border: .15rem solid #ffffff70;
     border-radius: 0.5rem;
 }
 
