--- a/src/Style/vistaPrincipalProducto.css
+++ b/src/Style/vistaPrincipalProducto.css
@@ -4,10 +4,10 @@
     width: 30%;
     height: 36rem;
     margin: 1rem 1.5% 1rem ;
-    background-color: #5555557a;
+    background-color: #008cffef;
     float: left;
-    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.25); 
-    border: .15rem solid #ffffff70;
+    box-shadow: 0 5px 15px #000000d7; 
+    border: .15rem solid #cacacab2;
     border-radius: 0.5rem;
 }
 
